--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "devDependencies":
     {
                         "proof":              "0.0.36",
-                        "b-tree":             "0.0.10"
+                        "b-tree":             "0.0.10",
+                        "advance":            "0.0.2"
     },
     "scripts":
     {
