--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
                         "type": "git",
                         "url": "http://github.com/bigeasy/splice.git"
     },
+    "main":             "splice",
     "dependencies":
     {
                         "cadence":            "0.0.44"
