--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "devDependencies":
     {
                         "proof":              "0.0.51",
-                        "b-tree":             "0.0.28",
+                        "rimraf":             "~2.2",
+                        "b-tree":             "0.0.29",
                         "advance":            "0.0.8"
     },
     "scripts":
