Upgrade Strata to 0.0.32.
Strata 0.0.32 introduces synchronous `insert` and `delete` and ranged
`indexOf`.

Closes #61.

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     {
                         "proof":              "0.0.51",
                         "rimraf":             "~2.2",
-                        "b-tree":             "0.0.31",
-                        "advance":            "0.0.9"
+                        "b-tree":             "0.0.32"
     },
     "scripts":
     {
