--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     {
                         "proof":              "0.0.56",
                         "advance":            "0.0.16",
-                        "rimraf":             "~2.2",
+                        "rimraf":             "2.4.3",
                         "b-tree":             "0.0.39"
     },
     "scripts":
