--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "main":             "splice",
     "dependencies":
     {
-                        "cadence":            "0.4.1"
+                        "cadence":            "1.0.x"
     },
     "devDependencies":
     {
