--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "devDependencies":
     {
                         "proof":              "0.0.56",
-                        "advance":            "0.0.16",
+                        "advance":            "1.0.x",
                         "rimraf":             "2.4.3",
                         "b-tree":             "1.0.x"
     },
