--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     },
     "devDependencies":
     {
-                        "proof":              "0.0.56",
+                        "proof":              "1.0.x",
                         "advance":            "1.0.x",
                         "rimraf":             "2.4.3",
                         "b-tree":             "1.0.x"
