--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
     "name":                 "splice",
     "version":              "1.0.0",
-    "author":               "Alan Gutierrez <alan@prettyrobots.com>",
-    "description":          "Merge an ordered collection of records into a Strata b-tree.",
+    "description":
+
+      "Merge an ordered collection of records into a Strata b-tree.",
+
     "keywords":
     [
                             "btree", "leveldb", "levelup", "binary", "mvcc",
                             "database", "json", "b-tree", "concurrent", "persistence"
     ],
+    "author":               "Alan Gutierrez <alan@prettyrobots.com>",
     "homepage":             "https://github.com/bigeasy/splice",
     "bugs":                 "https://github.com/bigeasy/splice/issues",
     "license":              "MIT",
@@ -16,7 +19,6 @@
                             "type": "git",
                             "url": "http://github.com/bigeasy/splice.git"
     },
-    "main":                 "splice",
     "dependencies":
     {
                             "cadence":                      "1.0.x"
@@ -28,6 +30,7 @@
                             "proof":                        "1.0.x",
                             "rimraf":                       "2.5.1"
     },
+    "main":                 "splice",
     "scripts":
     {
                             "test": "proof platform win32 && proof test */*/*.t.js || t/test"
