--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "main":                 "splice",
     "scripts":
     {
-                            "test": "proof platform win32 && proof test */*/*.t.js || t/test"
+                            "test": "proof platform win32 && proof test */*.t.js || t/test"
     }
 }
