--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ branches:
     - master
     - travis-ci
 
-before_install:
-  - npm install
-  - npm install istanbul coveralls
+install:
+  - npm install --no-package-lock --no-save
+  - npm install -g istanbul coveralls
