--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ branches:
 
 install:
   - npm install --no-package-lock --no-save
-  - npm install -g istanbul coveralls
+  - npm install -g nyc prove
