--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "devDependencies":
     {
                             "advance":                      "3.0.0-alpha.2",
-                            "b-tree":                       "2.0.0-alpha.27",
+                            "b-tree":                       "2.0.0-alpha.29",
+                            "destructible":                 "7.0.0-alpha.6",
                             "proof":                        "^9.0.2",
                             "riffle":                       "2.0.0-alpha.11",
                             "twiddle":                      "2.0.0-alpha.3"
