--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     },
     "devDependencies":
     {
-                            "advance":                      "3.0.0-alpha.2",
-                            "b-tree":                       "2.0.0-alpha.39",
-                            "destructible":                 "7.0.0-alpha.9",
+                            "advance":                      "^3.0.0-alpha.2",
+                            "b-tree":                       "^2.0.0-alpha.39",
+                            "destructible":                 "^7.0.0-alpha.9",
                             "proof":                        "^9.0.2",
-                            "riffle":                       "2.0.0-alpha.24",
-                            "twiddle":                      "2.0.0-alpha.4"
+                            "riffle":                       "^2.0.0-alpha.24",
+                            "twiddle":                      "^2.0.0-alpha.4"
     },
     "main":                 "splice",
     "scripts":
