--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
                             "destructible":                 "7.0.0-alpha.11",
                             "proof":                        "^9.0.2",
                             "riffle":                       "2.0.0-alpha.29",
+                            "skip":                         "0.1.0",
                             "twiddle":                      "2.0.0-alpha.6"
     },
     "main":                 "splice",
