--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
                             "destructible":                 "7.0.0-alpha.14",
                             "proof":                        "^9.0.2",
                             "riffle":                       "2.0.0-alpha.38",
-                            "skip":                         "0.1.1",
+                            "reciprocate":                  "0.0.1",
                             "twiddle":                      "2.0.0-alpha.6"
     },
     "main":                 "splice",
