--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "devDependencies":
     {
                             "advance":                      "3.0.0-alpha.8",
-                            "b-tree":                       "2.0.0-alpha.66",
+                            "b-tree":                       "2.0.0-alpha.69",
                             "destructible":                 "7.0.0-alpha.26",
+                            "magazine":                     "6.0.0-alpha.1",
                             "proof":                        "^9.0.2",
                             "reciprocate":                  "0.0.3",
                             "riffle":                       "2.0.0-alpha.46",
+                            "turnstile":                    "6.0.0-alpha.40",
                             "twiddle":                      "2.0.0-alpha.7"
     },
     "main":                 "splice",
