--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
                             "b-tree":                       "2.0.0-alpha.80",
                             "destructible":                 "7.0.0-alpha.38",
                             "magazine":                     "6.0.0-alpha.5",
+                            "operation":                    "6.0.0-alpha.4",
                             "proof":                        "^9.0.2",
                             "reciprocate":                  "0.0.5",
                             "riffle":                       "2.0.0-alpha.55",
