--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
                             "advance":                      "3.0.0-alpha.9",
                             "b-tree":                       "2.0.0-alpha.85",
                             "destructible":                 "7.0.0-alpha.45",
+                            "fracture":                     "0.3.0-alpha.41",
                             "magazine":                     "6.0.0-alpha.6",
                             "operation":                    "6.0.0-alpha.5",
                             "proof":                        "^9.0.2",
